--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql=true
 subscriptions.postsapi.h2-console-port=8081
 spring.h2.console.settings.trace=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+
+spring.datasource.maximum-pool-size=100
