--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,3 @@
-spring.profiles.include=h2
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:file:~/h2/subscriptions_db
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql=true
-subscriptions.postsapi.h2-console-port=8081
-spring.h2.console.settings.trace=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-
-
-spring.datasource.maximum-pool-size=100
+spring.jpa.hibernate.ddl-auto=update
+hibernate.show_sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
